--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.48MB/s(Youtube:不良林), server: 167.88.61.175, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
-  - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: 167.88.61.175, port: 443, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
-  - {name: 🇫🇷 法国-1.87MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
-  - {name: 🇺🇸 美国-1003.1KB/s(Youtube:不良林), server: 167.88.63.79, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇸🇬 新加坡-258.8KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-411.9KB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇳 中国-383.4KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-753.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-14.32MB/s(Youtube:不良林), server: 120.233.7.225, port: 100, type: trojan, password: 7dp3vF, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.67MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-773.0KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: 167.88.61.175, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-2.03MB/s(Youtube:不良林), server: 167.88.61.175, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.14MB/s(Youtube:不良林), server: 167.88.63.79, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇳🇱 荷兰-3.03MB/s(Youtube:不良林), server: youtube-bai-piao-wang-zhe.nl.884899.cf, port: 41196, type: trojan, password: 94afcc56-cc1c-4cd4-8c82-1215cd052795, sni: youtube-bai-piao-wang-zhe.nl.884899.cf, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-227.1KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-356.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-433.0KB/s(Youtube:不良林), server: 36.134.156.5, port: 65086, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇹🇭 泰国-389.4KB/s(Youtube:不良林), server: 119.59.116.248, port: 17159, type: trojan, password: PHnvNV7HGp, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.87MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1003.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-258.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-411.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-383.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-753.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.32MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-773.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.03MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.14MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-227.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-356.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-433.0KB/s(Youtube:不良林)
+      - 🇹🇭 泰国-389.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
