--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.45MB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-1.94MB/s(Youtube:不良林), server: 167.88.61.2, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-178.2KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇺🇸 美国-1.41MB/s(Youtube:不良林), server: 167.88.63.79, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-3.74MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 167.88.61.175, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-487.1KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇨🇳 中国-477.2KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-1.57MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇺🇸 美国-1.92MB/s(Youtube:不良林), server: 167.88.63.79, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-2.02MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-325.9KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.83MB/s(Youtube:不良林), server: 167.88.63.79, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: 167.88.61.175, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-301.9KB/s(Youtube:不良林), server: 5.188.0.151, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-1.44MB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 167.88.63.79, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.94MB/s(Youtube:不良林)
-      - 🇨🇳 中国-178.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.41MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.74MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-487.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-325.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.83MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-301.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.44MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
